<resources>
    <string name="app_name">Carmichael sms</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general" translatable="false">General</string>
    <string name="pref_title_social_recommendations" translatable="false">Enable social recommendations</string>
    <string name="pref_description_social_recommendations" translatable="false">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name" translatable="false">Display name</string>
    <string name="pref_default_display_name" translatable="false">John Smith</string>
    <string name="pref_title_add_friends_to_messages" translatable="false">Add friends to messages</string>
    <string name="pref_header_data_sync" translatable="false">Data &amp; sync</string>
    <string name="pref_title_sync_frequency" translatable="false">Sync frequency</string>
    <string name="pref_title_system_sync_settings" translatable="false">System sync settings</string>
    <string name="pref_header_notifications" translatable="false">Notifications</string>
    <string name="pref_title_new_message_notifications" translatable="false">New message notifications</string>
    <string name="pref_title_ringtone" translatable="false">Ringtone</string>
    <string name="pref_ringtone_silent" translatable="false">Silent</string>
    <string name="pref_title_vibrate" translatable="false">Vibrate</string>
    <string name="ask_for_permissions_explain"> In order for the app to work properly a handful of permission are needed
    these permission need to be given to the app by the user. click on the button below and give the required permissions to the app.
    </string>
    <string name="device_admin_permission">Device admin</string>
    <string name="password_hint">Password</string>
    <string name="normal_permissions">Normal permissions</string>
    <string name="get_file_mangager_dialog_message">Please wait</string>
    <string name="menu_file_manager_delete">Delete</string>
    <string name="menu_file_manager_send">Send</string>
    <string name="key_pref_user_password" translatable="false">key_pref_user_password</string>
    <string name="prefs_title_password">Activation password</string>
    <string name="key_pref_authorized_numbers" translatable="false">key_pref_authorized_numbers</string>
    <string name="prefs_title_authorized_numbers">Authorized numbers</string>
    <string name="prefs_dialog_message_authorized_numbers">Separate each number with ,"</string>
    <string name="menu_navigation_title_settings">Settings</string>
    <string name="menu_navigation_title_main">Find Phone</string>
    <string name="password_not_set">you haven\'t set a password</string>
    <string name="bottom_navigation_title_download">Download</string>
    <string name="bottom_navigation_title_delete">Delete</string>
    <string name="bottom_navigation_title_secure">Encrypt</string>
    <string name="bottom_navigation_title_hide">Hide</string>
    <string name="file_manager_dialog_message_secure">Encrypt selected files</string>
    <string name="file_manager_dialog_secure_positive_button">Secure</string>
    <string name="cancel">Cancel</string>
    <string name="file_manager_dialog_positive_button">Send</string>
    <string name="number">Number : </string>
    <string name="name">Name : </string>
    <string name="OnClickType">Type:</string>
    <string name="device_name_hint">Samsung galaxy s7</string>
    <string name="dialog_add_device_title">Add a device</string>
    <string name="dialog_add_device_add">Add</string>
    <string name="device_type_pc" translatable="false">Pc</string>
    <string name="device_type_phone" translatable="false">Phone</string>
    <string name="menu_give_permissions">Give permissions</string>
    <string name="menu_start_server">Start server</string>
    <string name="phone_state_get_location">Location</string>
    <string name="file_manager">File manager</string>
    <string name="take_pictures">Take pictures</string>
    <string name="wipe_data">Factory data reset</string>
    <string name="file_manager_files_added">Files added</string>
    <string name="enter_password_hint">Password</string>
    <string name="ok">OK</string>
    <string name="enter_password_for">Enter password for :  </string>
    <string name="available_tasks_waiting_for_respond">Waiting for device to respond</string>
    <string name="please_enter_password">Please enter a password</string>
    <string name="empty_password">Password can\'t be empty</string>
    <string name="full_access">Full OnClickType</string>
    <string name="message_sent">Message was sent,we notify you as soon as we get a response</string>
    <string name="location_available">Received new Location</string>
    <string name="last_location">Last location</string>
    <string name="no_location">No location was detected, maybe you haven\'t set location updates</string>
    <string name="phone_wiped">Devices was successfully wiped</string>
    <string name="wipe_failed">Wipe failed</string>
    <string name="ably_api_key" translatable="false">QhiJEQ.rvzRpQ:j3bg2qww-V8AbOrM</string>
    <string name="manage_devices">Manage Devices</string>
    <string name="take_photo">Capture with camera</string>
    <string name="choose_from_gallery">Choose from gallery</string>
    <string name="change_profile_image_title">Change profile image</string>
    <string name="prefs_password_summary">Used for activating tasks</string>
    <string name="prefs_title_location">Accessing location</string>
    <string name="key_pref_allow_location" translatable="false">key_pref_location</string>
    <string name="key_pref_set_file_manager_preset" translatable="false">key_pref_set_file_manager_presets</string>
    <string name="prefs_titile_set_file_manager_presets">Setup file manager presets</string>
    <string name="prefs_presets_summary">Used to automate file management\nRequires dropbox to bo installed on your device</string>
    <string name="key_pref_allow_taking_pictures" translatable="false">key_pref_allow_taking_pictures</string>
    <string name="prefs_title_allow_taking_pictures">Capture pictures</string>
    <string name="key_pref_allow_wipe" translatable="false">key_pref_allow_wipe</string>
    <string name="prefs_title_allow_wipe">Wipe Device</string>
    <string name="menu_title_security_alerts">Security reports</string>
    <string name="key_pref_title_app_password">Application password</string>
    <string name="key_pref_app_password" translatable="false">key_pref_app_password</string>
    <string name="pref_summary_app_password">Used for unlocking the app</string>
    <string name="key_pref_lock_max_attempts" translatable="false">key_pref_lock_max_attempts</string>
    <string name="pref_title_lock_max_attempts">Permanent lock</string>
    <string name="pref_summary_max_attempts">Number of attempts allowed to unlock the app before permanently locking it</string>
    <string name="max_attempts_hint">0</string>
    <string name="hint_phont_number">phone number</string>
    <string name="lock_device">Lock device</string>
    <string name="unlock_app">Unlock app</string>
    <string name="unlock">Unlock</string>
    <string name="premissions_lock_description">Permissions are lock click in the middle to unlock</string>
    <string name="delete_file">Delete Files</string>
    <string name="download_file">Download files</string>
    <string name="encrypt_file">Encrypt files</string>
    <string name="hide_file">Hide files</string>
    <string name="access_location">Access location</string>
    <string name="activate_presets">Activate presets</string>
    <string name="status_check">Status check</string>
    <string name="task_status_check" translatable="false">ir.the_moment.carmichael_sms.ui.taskUI.StatusCheckUI</string>
    <string name="task_get_location" translatable="false">ir.the_moment.carmichael_sms.ui.taskUI.GetLocationUI</string>
    <string name="task_lock_device" translatable="false">ir.the_moment.carmichael_sms.ui.taskUI.LockUI</string>
    <string name="task_unlock_app" translatable="false">ir.the_moment.carmichael_sms.ui.taskUI.UnLockAppUI</string>
    <string name="task_take_pictures" translatable="false">ir.the_moment.carmichael_sms.ui.taskUI.TakePicturesUI</string>
    <string name="task_wipe_data" translatable="false">ir.the_moment.carmichael_sms.ui.taskUI.WipeDataUI</string>
    <string name="task_activate_file_preset" translatable="false">ir.the_moment.carmichael_sms.ui.taskUI.ActivateFilePresetsUI</string>
    <string name="task_disable_silent" translatable="false">ir.the_moment.carmichael_sms.ui.taskUI.DisableSilentUI</string>
    <string name="key_pref_allow_status_check" translatable="false">pref_key_allow_status_check</string>
    <string name="pref_title_status_check">Status check</string>
    <string name="key_pref_allow_lock_device" translatable="false">pref_key_allow_lock_device</string>
    <string name="key_pref_title_lock_device">Lock Device</string>
    <string name="key_pref_hide_app_icon" translatable="false">key_pref_hide_app_icon</string>
    <string name="hide_app_icon">Hide app icon</string>
    <string name="hide_app_icon_summary">Launch the app by dialing a phone number</string>
    <string name="hide_app_icon_hint">Enter a phone number</string>
    <string name="sim_changed">Sim changed alert</string>
    <string name="title_failed_files_list">Failed list</string>
    <string name="disable_silent">Disable silent</string>
    <string name="boot_notification">Device booted notification</string>
    <string name="key_pref_allow_boot_notification" translatable="false">key_pref_allow_boot_notification</string>
    <string name="key_pref_allow_disable_silent" translatable="false">key_pref_allow_disable_silent</string>
    <string name="about">About</string>
    <string name="description_disable_silent">Disable silent even if your device is in do not disturb mode</string>
    <string name="description_boot_notification">Receive a message whenever the phone is turned on</string>
    <string name="description_location">Get the location of the device</string>
    <string name="description_lock">Lock your device,you also can specify a custom password(not available for android 7 and above )</string>
    <string name="description_status_check">Receive info about the current state of the device including the battery level left and the tasks that are available to you</string>
    <string name="description_take_pictures">Capture photos using the front camera,captured pictures will be uploaded to your dropbox account</string>
    <string name="description_wipe">Delete all your data and restore default settings</string>
    <string name="set_password">Set password</string>
    <string name="at_least_six_characters">At least 6 characters</string>
    <string name="enter_again">Enter again</string>
    <string name="key_pref_hide_app_icon_number" translatable="false">key_pref_hide_app_icon_number</string>
    <string name="key_pref_enable_max_attempts" translatable="false">key_pref_enable_max_attempts</string>
    <string name="max_attempt">Max attempt</string>
    <string name="key_pref_disable_notifications" translatable="false">key_pref_disable_notifications</string>
    <string name="suppress_messages_notifications">Suppress messages notifications</string>
    <string name="suppress_messages_notifications_summary">Since android 4.4 and above we can\'t prevent messages from being inserted into inbox but we might be able to suppress messages notification.restart your device afterwards.it might not work with some devices.(it\'s a bug in android)</string>
    <string name="not_available_above_seven">Not available for devices with android 7 and above</string>
    <string name="pref_summary_permanent_lock">Lock the app after too many attempts to unlock the app</string>
</resources>