<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_margin="5dp"
    android:gravity="center"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:src="@drawable/padlock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <CheckBox
        android:id="@+id/set_password"
        android:checked="true"
        android:gravity="center"
        android:text="@string/set_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/not_available_above_seven"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:gravity="center"
        android:id="@+id/password"
        android:layout_marginTop="5dp"
        android:hint="@string/at_least_six_characters"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword" />

    <EditText
        android:gravity="center"
        android:id="@+id/password_confirm"
        android:layout_marginTop="5dp"
        android:hint="@string/enter_again"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword" />

</LinearLayout>